--- a/index1.html
+++ b/index1.html
@@ -31,9 +31,9 @@ integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pB
             <nav class="navbar">
                 <ul class="page">
                     <li><a href="#about">About</a></li>
-                    <li><a href="what-we-do.html">What we do</a></li>
-                    <li><a href="donate now.html">Donate Now</a></li>
-                    <li><a href="#contact-us.">Contact</a></li>
+                    <li><a href="whatwedo.html">What we do</a></li>
+                    <li><a href="donate.html">Donate Now</a></li>
+                    <li><a href="#contactus.">Contact</a></li>
                     <li><a href="feedback.html">Feedback</a></li>
                     <li><a href="analysis.html">Dashboard</a></li>
                 </ul>
